@@ -48,10 +48,10 @@ val addtexts :
     Pdf.t ->(*pdf*)
     Pdf.t
 
-(** Add a rectangle to the given pages. [addrectangle fast (w, h) colour outline linewidth opacity position relative_to_cropbox underneath range pdf]. *) 
+(** Add a rectangle to the given pages. [addrectangle fast coordinate colour outline linewidth opacity position relative_to_cropbox underneath range pdf]. *) 
 val addrectangle :
     bool ->
-    float * float ->
+    string ->
     colour ->
     bool ->
     float ->
